--- a/curslet.cabal
+++ b/curslet.cabal
@@ -6,5 +6,11 @@ Description: High-level terminal ui library.
 Cabal-Version: >= 1.2
 Build-Type: Simple
 Library
-  exposed-modules: UI.Curslet, UI.Curslet.Ncurses
+  exposed-modules:
+      UI.Curslet
+    , UI.Curslet.Ncurses
+  other-modules:
+      UI.Curslet.Class
+    , UI.Curslet.Ncurses.Types
+    , UI.Curslet.Ncurses.Bindings
   build-depends: base
